lab1/Test/L1-A-13-96.output
Error Type B at Line 2
Error Type A at Line 12
Error Type A at Line 14
Error Type B at Line 22
Error Type B at Line 23
Error Type B at Line 36
Error Type B at Line 37
Error Type B at Line 41
Error Type B at Line 48
