lab1/Test/L1-A-13-96.cmm
float HNN4NnV ( ) {
  int K5RCB8cZfIw8E8l [ . 2090371600 ] = F45PnMdkTxt3LcL 
    = mXatuKtqztT || e_sFXRY1FrU99C58DIk == NBsxB8gqsYmMcGqV 
    - Ic6G6Cf * ! - r0IifyQsMeOEe ( L2hkgnyXwTbT5c715 
    && M1cSMsn <= ! C4bihCvO0 [ gIL / ! ( yTRlWiiUBn < 
    - bLPlRLXuy3Yqmfz5_F ( IWtnqWSwags , AQKrRl6KaSvJ2c 
    , eDM211VuBgSTRAFWS = MeuGGuq2 = pVuIlh_ZcVfzVIF8 
    >= G - KYUOw9v3cUqBrE [ zymb0QTmMaznDD && XxXfx8V39kEVkV0r6TS 
    > TshFlUnCFiMezUtjteDa ] ) != ab5g * ! gXmcSQ2U2FbT 
    ) + - 148524557.1286478487 ] + HloJK ( ) . ntZxcs9s 
    ) / 1365864671 , hpe8zvs_ ;
}$
int ;
struct ${
  struct V6OLYh_rAtWTEQLB _M47ht5F_4Py ;
  int YRKk ;
};
struct NKyda8UZbp7VCrjFN aGjUowBfw9UWy562SPH , rEWVP8T5jwmNxA 

;
struct RcNsAeun5XBo2UP {
};+ 
int Qt4KeyjGF ( int , int K ) {
{
  }}
int f62bH5Ve ( ) {
}
int HL ( ) {
}
int ;
int D4PYEmd1trhQ8SiiC ( ) {
}
int iMaeU5zLhXRNMG2MGDv9 ( ) {
  YB9EguAisS ;
  ZD878Eq7GykOUxC0rzz ;
||   XRY3orP5Mu4l4 ;
  if ( PbREXzCHj )   C int ;
else   while ( DWhP )   _w0cc 


  if ( Vxd )   return HmHyZJujNnWqm5qtrwS ;
else   if ( hgUO8I8doHmW9 )   op4bPQzZIp ;


}
int ;
int ;
- 